--- a/src/main/java/HomePage.form
+++ b/src/main/java/HomePage.form
@@ -56,6 +56,9 @@
             </LineBorder>
           </Border>
         </Property>
+        <Property name="maximumSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
+          <Dimension value="[500, 500]"/>
+        </Property>
       </Properties>
 
       <Layout>
